<resources>
    <string name="app_name">V-Clip</string>

    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="favorite">즐겨찾기</string>
    <string name="settings">설정</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="next">다음</string>
    <string name="done">완료</string>
    <string name="previous">이전</string>
    <string name="ignore">무시</string>
    <string name="do_setting">설정하기</string>
    <string name="do_start">시작하기</string>

    <string name="app_finish">뒤로 버튼을 한번 더 누르시면 앱이 종료됩니다.</string>

    <string name="ssl_error_description">SSL 인증서 확인중 오류가 발생되었습니다.</string>
    <string name="invalid_url">유효한 URL이 아닙니다.\n다시 시도해주세요.</string>

    <string name="error_default">인터넷 연결을 확인해주세요.</string>
    <string name="hint_search">책 이름을 입력하세요</string>
    <string name="empty_book">검색된 책이 없습니다.</string>

    <string name="format_price">%,d원</string>
    <string name="format_publisher_release">%s | %s</string>

    <string name="format_sns_time_just_now">방금 전</string>
    <string name="format_sns_time_min">%s분 전</string>
    <string name="format_sns_time_hour">%s시간 전</string>
    <string name="format_sns_time_day">%s일 전</string>

    <string name="denied_external_storage_message">외부 저장소를 사용하려면 외부 저장소 사용 권한이 필요합니다.</string>
    <string name="denied_external_storage_title">외부 저장소 사용에 대한 액세스 권한이 없습니다</string>
    <string name="move_to_setting_permission">앱 설정에서 액세스 권한을 수정할 수 있습니다. 앱 설정 화면으로 이동 하시겠습니까?</string>

    <string name="apply_policies_terms_message">로그인함으로써 V-Clip의 정책 및 약관에 동의합니다.</string>
    <string name="terms_of_service">서비스이용 약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="mercy_copyright">Copyright © 2022 MERCY all rights reserved</string>

    <string name="sign_in_google">구글 계정으로 로그인하기</string>

    <string name="sign_in_title">Make an impact!</string>
    <string name="sign_in_subtitle">나만을 위한 영상 리스트를 만들어보세요.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="on_boarding_title1">나의 생활 루틴에 맞춰\n동영상을 시청할수 있도록 1</string>
    <string name="on_boarding_title2">나의 생활 루틴에 맞춰\n동영상을 시청할수 있도록 2</string>
    <string name="on_boarding_title3">나의 생활 루틴에 맞춰\n동영상을 시청할수 있도록 3</string>
    <string name="on_boarding_subtitle1">동영상 시청습관을 커스텀1</string>
    <string name="on_boarding_subtitle2">동영상 시청습관을 커스텀2</string>
    <string name="on_boarding_subtitle3">동영상 시청습관을 커스텀3</string>

    <string name="question_count">\u00A0of %d</string>

    <string name="format_selected_limit">%d개까지만 선택 가능합니다</string>

    <string name="start_vclip">V.Clip 이용하기</string>

    <string name="name_to">님</string>
    <string name="welcome">환영합니다!</string>
    <string name="welcome_hello">반가워요!</string>
    <string name="welcome_need_information">V.Clip을 이용하기 위해서는\n3가지 정보가 필요해요</string>
    <string name="welcome_description">나만의 동영상들로 Clip 해보세요!</string>

</resources>