<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:contentDescription="@string/home" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:contentDescription="@string/search" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"
        app:contentDescription="@string/favorite" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:contentDescription="@string/settings" />
</menu>
