<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="sideproject.mercy.presentation.ui.account.signin.viewmodel.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/divider_white_1dp"
            android:layout_marginHorizontal="26dp"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="13dp"
            android:text="@string/sign_in_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="42dp"
            android:text="@string/sign_in_subtitle"
            android:textColor="@color/color_adadad"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/bt_next"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="73dp"
            android:background="@drawable/bg_white_radius_12dp"
            android:gravity="center"
            android:text="@string/sign_in_google"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_apply_terms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:onDebouncedClick="@{viewModel::onClickSignInGoogle}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_apply_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/apply_policies_terms_message"
            android:textColor="@color/color_71727a"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/terms_of_service"
            android:textColor="@color/color_00c880"
            android:textSize="12sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="@id/tv_privacy_policy"
            app:layout_constraintEnd_toStartOf="@id/tv_privacy_policy"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/color_00c880"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_copyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_terms_of_service" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="22dp"
            android:text="@string/mercy_copyright"
            android:textColor="@color/color_71727a"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>